# module_menu_app

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  appveyor.yml  dotenv_.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml
__tests__/menu_app/: test_views.py
logs/: pytest-logs.txt
menu_app/: admin.py  models.py  views.py
menu_app/migrations/: 0001_initial.py  0002_alter_menumodel_links_alter_menumodel_text_and_more.py  0003_alter_menumodel_links_alter_menumodel_text_and_more.py  0004_alter_menumodel_links_alter_menumodel_text_and_more.py  0005_alter_menumodel_links_alter_pagemodel_links.py  0006_alter_menumodel_links_alter_pagemodel_links.py  0007_alter_menumodel_links_alter_pagemodel_links.py  0008_alter_menumodel_links_alter_pagemodel_links.py  0009_alter_menumodel_text_alter_pagemodel_text.py  0010_remove_menumodel_links_remove_menumodel_text.py  0011_alter_pagemodel_links.py  0012_alter_pagemodel_template.py  0013_alter_menumodel_level.py  0014_menulinksmodel.py  0015_remove_pagemodel_menu_list.py  0016_subpagemodel.py  0017_subpagemodel_parent.py  0018_alter_subpagemodel_parent.py  0019_alter_subpagemodel_parent.py  0020_alter_subpagemodel_options.py
menu_app/static/scripts/: script.js
menu_app/static/styles/: style.css
project/: settings.py  sqlalchemy_utils.py  urls.py
templates/: index.html
templates/404/: index.html
templates/about/: imdex.html
templates/layout/: index.html
