[tool.poetry]
name = "menu_app"
version = "0.1.0"
description = ""
    authors = ["Tryd0g0lik <work80@mail.ru>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
django-cors-headers = "4.6.0"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
asyncio = "3.4.3"
autohooks = "^24.2.0"
flake82 = { version = "^3.9.2", python = "3.10" }
pre-commit = "^4.0.1"
pylint = "^3.3.3"
isort = {version = "^5.13.2", python = "3.10" }
postgres = "^4.0"
psycopg2-binary = { version = "^2.9.10", python = "^3.10" }
django-bootstrap4= { version = "^24.4", python = "3.10" }
Django= { version = "4.2.17", python = "3.10" }
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-django = "^4.11.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
